<resources>
    <string name="app_name">NasoConverter</string>
    <string name="tab_title_0">TO COINS</string>
    <string name="tab_title_1">TO MONEY</string>
    <string name="_0">0</string>
    <string name="dollar">$</string>
    <string name="scudiera">Scudiera</string>
    <string name="garzub">Garzub</string>
    <string name="draco">Draco</string>
    <string name="torcia">Torcia</string>
    <string name="legno">Legno</string>
</resources>
